--- a/index.html
+++ b/index.html
@@ -12,5 +12,12 @@
             Hello customers, are you willing to grow your business? You are visiting the right place.
         </p>
     </div>
+
+    <center>
+        <img src = "./Assets/National Mourning Day.png" height="500" width="500" ><br>
+        <img src = "./Assets/14 dec.png" height="500" width="500" ><br>
+        <img src = "./Assets/Victory day.png" height="500" width="500" ><br>
+        
+    </center>
 </body>
 </html>
